<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_profile_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/avatar"
            android:src="@drawable/ic_people" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/pink1"
            android:textSize="20sp"
            tools:text="John Doe" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:text="someone@email.com" />


    </RelativeLayout>


    <TextView
        android:id="@+id/label_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_setting"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/btn_set_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_auth"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/custom_profile_button_ripple"
        android:gravity="center_vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/txt_change_language"
            android:textColor="@color/pink1"
            app:drawableStartCompat="@drawable/ic_baseline_translate_24"
            app:drawableTint="@color/pink1"
            tools:ignore="RelativeOverlap"
            tools:targetApi="m" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_set_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_set_language"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/custom_profile_button_ripple"
        android:gravity="center_vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/txt_permission"
            android:textColor="@color/pink1"
            app:drawableStartCompat="@drawable/ic_baseline_key_24"
            app:drawableTint="@color/pink1"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_logout_button_ripple"
        android:text="@string/btn_txt_logout"
        app:backgroundTint="@null"
        android:layout_below="@+id/btn_set_permission"/>
</RelativeLayout>